[package]
name = "aoc_2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "puzzle1a"
path = "src/main1a.rs"

[[bin]]
name = "puzzle1b"
path = "src/main1b.rs"

[[bin]]
name = "puzzle2a"
path = "src/main2a.rs"

[[bin]]
name = "puzzle2b"
path = "src/main2b.rs"
