[package]
name = "aoc_2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7.0"

[[bin]]
name = "puzzle1a"
path = "src/main1a.rs"

[[bin]]
name = "puzzle1b"
path = "src/main1b.rs"

[[bin]]
name = "puzzle2a"
path = "src/main2a.rs"

[[bin]]
name = "puzzle2b"
path = "src/main2b.rs"

[[bin]]
name = "puzzle3a"
path = "src/main3a.rs"

[[bin]]
name = "puzzle3b"
path = "src/main3b.rs"

[[bin]]
name = "puzzle4a"
path = "src/main4a.rs"

[[bin]]
name = "puzzle4b"
path = "src/main4b.rs"

[[bin]]
name = "puzzle5a"
path = "src/main5a.rs"

[[bin]]
name = "puzzle5b"
path = "src/main5b.rs"

[[bin]]
name = "puzzle6a"
path = "src/main6a.rs"

[[bin]]
name = "puzzle6b"
path = "src/main6b.rs"

[[bin]]
name = "puzzle7a"
path = "src/main7a.rs"

[[bin]]
name = "puzzle7b"
path = "src/main7b.rs"

[[bin]]
name = "puzzle7-alt"
path = "src/main7_alternative.rs"

[[bin]]
name = "puzzle8a"
path = "src/main8a.rs"

[[bin]]
name = "puzzle8b"
path = "src/main8b.rs"
